# simple-kv-store

./: .gitignore  CMakeLists.txt  LICENSE  README.md  database.cpp  database.h  exceptions.h  memory_mapped_file.cpp  memory_mapped_file.h  notes.md  serdes.h  test.cpp  util.h
